nullaway_error_cc533780-5554-45d3-a2f7-6383a93a4317.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/Environment.java:1358: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.map;
    ^
    (see http://t.uber.com/nullaway )
